# prion

./: .gitignore  LICENSE  README.md  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml
hooks/: pre-commit
src/prion/: __init__.py  injectors.py  models.py  syringe.py  syringes.py
src/prion/_internal/: dependency.py
src/prion/collections/: __init__.py  node.py  tree.py
src/prion/metaclasses/: __init__.py  singleton.py
tests/: test_collections.py  test_injectors.py  test_prion.py  test_syringe.py  test_syringes.py
