[project]
name = "prion"
version = "0.1.0"
description = "Dependency injection framework using pure Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Geunryeol Park", email = "pkr5207@gmail.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Utilities"
]
license = "MIT"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
managed = true
resolution = "highest"

[tool.pytest.ini_options]
addopts = ["--doctest-glob=*.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
