[project]
name = "prion"
version = "0.2.0"
description = "Dependency injection framework using pure Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Geunryeol Park", email = "pkr5207@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Utilities",
  "Typing :: Typed",
]
keywords = ["dependency-injection", "di", "ioc"]
license = "MIT"

[project.urls]
Repository = "https://github.com/misut/prion"
Issues = "https://github.com/misut/prion/issues"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
managed = true
resolution = "highest"

[tool.pytest.ini_options]
addopts = ["--doctest-glob=*.md"]

[tool.ruff.lint]
ignore = ["F403"]

[dependency-groups]
dev = ["pytest>=9.0.2"]
